[gd_scene load_steps=10 format=1]

[ext_resource path="res://src/MainScreens/Menu.gd" type="Script" id=1]
[ext_resource path="res://src/Parallax/MenuBackground.tscn" type="PackedScene" id=2]
[ext_resource path="res://assets/images/buttons/button-normal.png" type="Texture" id=3]
[ext_resource path="res://assets/images/buttons/button-click.png" type="Texture" id=4]
[ext_resource path="res://assets/images/buttons/button-hover.png" type="Texture" id=5]
[ext_resource path="res://assets/fonts/Pacifico/Pacifico-Regular.ttf" type="DynamicFontData" id=6]
[ext_resource path="res://assets/images/buttons/exit.png" type="Texture" id=7]
[ext_resource path="res://assets/images/buttons/team.png" type="Texture" id=8]

[sub_resource type="DynamicFont" id=1]

font/size = 55
font/use_mipmaps = false
font/use_filter = false
font/font = ExtResource( 6 )

[node name="Menu" type="Node2D"]

script/script = ExtResource( 1 )

[node name="MenuBackground" parent="." instance=ExtResource( 2 )]

[node name="Start" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 570.0
margin/top = 580.0
margin/right = 916.0
margin/bottom = 720.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 5 )
params/scale = Vector2( 0.8, 0.8 )

[node name="StartLabel" type="Label" parent="Start"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 0.0
margin/right = 330.0
margin/bottom = 130.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.225708, 0.106354, 0.800781, 1 )
custom_colors/font_color_shadow = Color( 0.202774, 0.177612, 0.378906, 1 )
text = "Empezar"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="Tables" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 90.0
margin/top = 580.0
margin/right = 436.0
margin/bottom = 720.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 3 )
textures/pressed = ExtResource( 4 )
textures/hover = ExtResource( 5 )
params/scale = Vector2( 0.8, 0.8 )

[node name="TablesLabel" type="Label" parent="Tables"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 10.0
margin/top = 0.0
margin/right = 330.0
margin/bottom = 130.0
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0.225708, 0.106354, 0.800781, 1 )
custom_colors/font_color_shadow = Color( 0.202774, 0.177612, 0.378906, 1 )
text = "Tablas"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = { "_edit_lock_":true }

[node name="Exit" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 20.0
margin/top = 20.0
margin/right = 140.0
margin/bottom = 140.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 7 )

[node name="Team" type="TextureButton" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1130.0
margin/top = 600.0
margin/right = 1260.0
margin/bottom = 701.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 8 )

[connection signal="pressed" from="Start" to="." method="_on_Start_pressed"]

[connection signal="pressed" from="Exit" to="." method="_on_Exit_pressed"]

[connection signal="pressed" from="Team" to="." method="_on_Team_pressed"]


